# bam_parallel

./: .gitignore  Cargo.toml  README.md  test.py  test_suites.py  tests_list.py
bam_binary/: Cargo.toml
bam_binary/src/: main.rs
bam_tools/: Cargo.toml
bam_tools/src/: block.rs  gz.rs  lib.rs  readahead.rs  reader.rs  util.rs
bam_tools/src/reader/: readahead.rs  records.rs
bam_tools/src/record/: bamrawrecord.rs
bam_tools/src/sort/: comparators.rs  sort.rs
bam_tools/src/sorting/: comparators.rs  sort.rs
src/: block.rs  lib.rs  parallel_reader.rs  util.rs
src/sort/: comparators.rs  sort.rs
