[package]
name = "bam_binary"
version = "0.1.0"
authors = ["nickr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
bam_tools = {path = "../bam_tools"}
md-5 = "0.9.1"
byteorder = "1.2.3"
num_cpus = "0.2"
tempdir = "0.3.7"